Update LeetCode link in index.html

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <a href="https://github.com/vectorarchitect"><i class="fab fa-github fa-2x contact-icon"></i></a>
                 <a href="https://instagram.com/savinav.sharma"><i class="fab fa-instagram fa-2x contact-icon"></i></a>
                 <!-- <a href="https://youtube.com/@savinav"><i class="fab fa-youtube fa-2x contact-icon"></i></a> -->
-                <a href="https://leetcode.com/u/savinav/">
+                <a href="https://leetcode.com/u/vectorarchitect/">
                     <img src="leetcode_logo.png" class="contact-icon">
                 </a>
                   
